hphp/hack/test/typecheck/constraint-method-call/call.php.exp
ERROR: File "call.php", line 29, characters 10-70:
Typing error (Typing[4110])
  File "call.php", line 30, characters 15-16:
  Expected `int` because this is used in an arithmetic operation
  File "call.php", line 31, characters 11-13:
  But got `float`
ERROR: File "call.php", line 34, characters 10-57:
Typing error (Typing[4110])
  File "call.php", line 33, characters 17-18:
  Expected `int` because this is used in an arithmetic operation
  File "call.php", line 36, characters 11-13:
  But got `float`
